--- a/Templates/Index.html
+++ b/Templates/Index.html
@@ -1,33 +1,58 @@
-{% extends "base.html" %} {% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MENU</title>
 
 
-<h1 class="text-center">PAGINAS</h1>
-<div class="d-flex justify-content-around mt-4">
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Pagina1</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="Pagina1/" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" 
+    crossorigin="anonymous"
+    />
 
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Pagina2</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="Pagina2/" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Pagina3</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="Pagina3/" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-</div>
+    
+</head>
+<body>
+    
 
 
+    <h1 class="text-center">PAGINAS</h1>
+    <div class="d-flex justify-content-around mt-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Pagina1</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="Pagina1/" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+    
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Pagina2</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="Pagina2/" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+    
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Pagina3</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="Pagina3/" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+    </div>
+    
+    
 
-{% endblock  %}
+
+
+
+
+
+
+
+</body>
+</html>
