INICIAR SESIÓN/CREAR CUENTA

--- a/Templates/Index.html
+++ b/Templates/Index.html
@@ -45,11 +45,11 @@
           </div>
     </div>
     
-    
+<br></br><br>
 
-
-
-
+<div class="text-center">
+  <a href="../" class="btn btn-primary">INICIAR SESIÓN/CREAR CUENTA</a>
+</div>
 
 
 
